# docs/swagger.json
@@ -1,23 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "crud api",
-        "title": "Persons Api",
-        "contact": {
-            "name": "my github",
-            "url": "http://github.com/lafetz"
-        },
-        "license": {
-            "name": "MIT",
-            "url": "https://opensource.org/licenses/MIT"
-        },
-        "version": "1.0"
+        "contact": {}
     },
-    "basePath": "/api/v1",
     "paths": {
         "/api/v1/persons": {
             "get": {
-                "description": "Retrieve a list of persons",
+                "description": "Retrieve a list of persons with pagination support",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,14 +17,33 @@
                     "Persons"
                 ],
                 "summary": "Get all persons",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 0,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.Person"
-                            }
+                            "$ref": "#/definitions/dto.GetPersonsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "intrnal server error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -74,6 +82,12 @@
                         "description": "Invalid input",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "422": {
+                        "description": "Validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/customvalidator.ValidationErrorResponse"
                         }
                     }
                 }
@@ -164,6 +178,12 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "422": {
+                        "description": "Validation failed",
+                        "schema": {
+                            "$ref": "#/definitions/customvalidator.ValidationErrorResponse"
+                        }
                     }
                 }
             },
@@ -203,6 +223,15 @@
         }
     },
     "definitions": {
+        "customvalidator.ValidationErrorResponse": {
+            "type": "object",
+            "properties": {
+                "errors": {},
+                "statusCode": {
+                    "type": "integer"
+                }
+            }
+        },
         "domain.Person": {
             "type": "object",
             "properties": {
@@ -241,6 +270,60 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.GetPersonsResponse": {
+            "type": "object",
+            "properties": {
+                "meta": {
+                    "$ref": "#/definitions/dto.JSONMetadata"
+                },
+                "persons": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.JSONPerson"
+                    }
+                }
+            }
+        },
+        "dto.JSONMetadata": {
+            "type": "object",
+            "properties": {
+                "currentPage": {
+                    "type": "integer"
+                },
+                "firstPage": {
+                    "type": "integer"
+                },
+                "lastPage": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "totalRecords": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.JSONPerson": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "hobbies": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "id": {
+                    "type": "string"
                 },
                 "name": {
                     "type": "string"
